0023920: Change use of static variables in Message package to prevent data races in Shape Healing